# Toxicity-Assessment

./: .gitignore  README.md  app.py  inspect_dataset.py  main.py  preprocess.py  pyproject.toml  requirements.txt  sanity_check.py  train_model.py
model/: metadata.json  pipeline.joblib
static/: app.js  style.css
templates/: index.html
